@@ -930,6 +930,16 @@ SELECT CASE id
   movemouse retvals(0), retvals(1)
  CASE 164'--mouse region
   mouserect retvals(0), retvals(1), retvals(2), retvals(3)
+ CASE 178'--readgmap
+  IF retvals(0) >= 0 AND retvals(0) <= 19 THEN
+   scriptret = gmap(retvals(0))
+  END IF
+ CASE 179'--writegmap
+  IF retvals(0) >= 0 AND retvals(0) <= 19 THEN
+   gmap(retvals(0)) = retvals(1)
+   IF retvals(0) = 5 THEN setoutside -1  'hint: always use the wrapper
+   IF retvals(0) = 6 AND gmap(5) = 2 THEN setoutside retvals(1)
+  END IF
 END SELECT
 
 END SUB
